# ferrotune

./: .dockerignore  .gitignore  .prototools  AGENTS.md  CLIENT-TODO.md  Cargo.toml  Dockerfile  README.md  TAURI.md  config.example.toml  flake.nix  moon.yml  rust-toolchain.toml
.agent/rules/: agents-md.md
.cargo/: config.toml
.devcontainer/: devcontainer.json  post-create.sh
.github/scripts/: cleanup-app-prereleases.sh  collect-tauri-artifacts.sh  prepare-app-release-metadata.sh  sign-android-apk.sh  write-app-release-notes.sh  write-tauri-ci-config.sh
.github/workflows/: ci.yml
.moon/: workspace.yml
bindings/: AvailablePeriod.ts  PeriodReview.ts  PeriodReviewResponse.ts  TopAlbum.ts  TopArtist.ts  TopTrack.ts
client/: .gitignore  .prettierignore  README.md  eslint.config.mjs  index.html  moon.yml  next.config.ts  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  tauri.android-deploy.conf.json  tsconfig.json  vite.config.ts
client/e2e/: accent-color.spec.ts  admin.spec.ts  android-emulator.spec.ts  app-helpers.ts  auth.setup.ts  auth.spec.ts  browse.spec.ts  bulk-actions.spec.ts  context-menus.spec.ts  details.spec.ts  fixtures.ts  global-setup.ts  global-teardown.ts  history-manage.spec.ts  home-continue-listening.spec.ts  import.spec.ts  mobile.spec.ts  page-visibility.ts  playback.spec.ts  playlist-reordering.spec.ts  playlists.spec.ts  queue-helpers.ts  queue.spec.ts  search.spec.ts  sessions.spec.ts  setup.spec.ts  smart-playlists.spec.ts  sorting-filtering.spec.ts  starring.spec.ts  tagger.spec.ts
client/public/: manifest.json
client/scripts/: clean-android-daemons.sh  install-playwright-browser.sh  sync-android-icons.sh
client/src/: main.tsx  routes.tsx  vite-env.d.ts
client/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
client/tauri-plugin-native-audio/: .gitignore  Cargo.toml  build.rs
client/tauri-plugin-native-audio/android/: .gitignore  build.gradle.kts  consumer-rules.pro
client/tauri-plugin-native-audio/android/src/main/: AndroidManifest.xml
client/tauri-plugin-native-audio/android/src/main/kotlin/com/ferrotune/audio/: ArtworkContentProvider.kt  AudioState.kt  CastOptionsProvider.kt  FerrotuneApiClient.kt  FerrotuneDownloadService.kt  NativeAudioLogger.kt  NativeAudioPlugin.kt  NativeCastManager.kt  NativeListeningSessionLifecycle.kt  OwnedCallback.kt  OwnershipClaimGuard.kt  PlaybackErrorClassifier.kt  PlaybackNotificationLifecycle.kt  PlaybackResumeLogic.kt  PlaybackService.kt  PlaybackStallMonitor.kt  ReplayGainAudioProcessor.kt  SseConnectionGeneration.kt  WebViewPlaybackEventPolicy.kt
client/tauri-plugin-native-audio/android/src/main/res/values/: strings.xml
client/tauri-plugin-native-audio/android/src/test/kotlin/com/ferrotune/audio/: NativeAudioLoggerTest.kt  NativeListeningSessionLifecycleTest.kt  OwnedCallbackTest.kt  OwnershipClaimGuardTest.kt  PlaybackErrorClassifierTest.kt  PlaybackNotificationLifecycleTest.kt  PlaybackResumeLogicTest.kt  PlaybackStallMonitorTest.kt  SseConnectionGenerationTest.kt  WebViewPlaybackEventPolicyTest.kt
client/tauri-plugin-native-audio/guest-js/: package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
client/tauri-plugin-native-audio/guest-js/src/: index.ts  types.ts
client/tauri-plugin-native-audio/permissions/: default.toml
client/tauri-plugin-native-audio/permissions/autogenerated/: reference.md
client/tauri-plugin-native-audio/permissions/autogenerated/commands/: get_cast_media_status.toml  get_cast_state.toml  invalidate_queue.toml  load_cast_media.toml  pause_cast_media.toml  play_at_index.toml  play_cast_media.toml  request_cast_session.toml  request_playback.toml  seek_cast_media.toml  set_cast_volume.toml  set_replay_gain.toml  set_track.toml  soft_invalidate_queue.toml  start_autonomous_playback.toml  start_offline_playback.toml  start_playback.toml  stop_cast_media.toml  stop_cast_session.toml  toggle_shuffle.toml  update_starred_state.toml
client/tauri-plugin-native-audio/permissions/schemas/: schema.json
client/tauri-plugin-native-audio/src/: commands.rs  error.rs  lib.rs  mobile.rs  models.rs
docs/: ANDROID_EMULATOR.md  API_STATUS.md  APP_DISTRIBUTION.md  ENVIRONMENT.md  FEATURES.md  TESTING.md
migrations/: 001_initial_schema.sql  001_schema.sql  002_cover_art_thumbnails.sql  002_ratings.sql  003_playlist_folders.sql  003_scrobbles_import.sql  004_playlist_folder_cover.sql  004_song_folder.sql  004_watch_enabled_and_smart_playlists.sql  005_migrate_virtual_folders.sql  005_play_queue.sql  005_playlist_entry_added_at.sql  006_playlist_entry_id.sql  006_user_preferences.sql  007_file_mtime.sql  007_playlist_song_delete_behavior.sql  008_content_hash.sql  008_remove_readonly_tags_default.sql  009_cover_art_dimensions.sql  009_fts_improvements.sql  009_tagger_sessions.sql  010_listening_stats.sql  010_recycle_bin.sql  011_lazy_queue.sql  011_shuffle_exclude.sql  012_file_path_per_folder_unique.sql  012_preferences_json.sql  013_bliss_analysis.sql  013_server_queue.sql  014_queue_entry_id.sql  015_music_folder_metadata.sql  016_artist_song_count.sql  016_user_library_access.sql  017_server_config.sql  018_playlist_missing_entries.sql  019_missing_entry_search_text.sql  020_fix_queue_entries_pk.sql  020_password_hashing.sql  023_cleanup_legacy_queue_data.sql  024_single_session_per_user.sql  (+1 more)
migrations/postgres/: 001_auth_bootstrap.sql  002_library_core.sql  003_playback_queue_state.sql  004_user_song_flags.sql  005_playlist_core.sql  006_smart_playlist_core.sql  007_lastfm_sessions.sql  008_listening_sessions.sql  009_waveform_data.sql  (+11 more)
scripts/: build-release.sh  check-test-prerequisite.sh  cleanup-fts-duplicates.sh  generate-test-fixtures.sh  generate-ts-bindings.sh  migrate-data.sh  pull-android-diagnostics.sh  sync-replaygain.sh
src/: analysis.rs  bliss.rs  config.rs  error.rs  lib.rs  main.rs  password.rs  replaygain.rs  scanner.rs  thumbnails.rs  watcher.rs
tests/: custom_tests.rs  database_smoke.rs  integration.rs  integration_postgres.rs  postgres_container.rs  postgres_server_smoke.rs  seaorm_entity_smoke.rs
(+569 files in other folders)
