[package]
name = "tauri-plugin-native-audio"
version = "0.1.0"
authors = ["Ferrotune"]
description = "Native audio playback plugin for Tauri with Android MediaSession support"
edition = "2021"
rust-version = "1.77.2"
license = "MIT"
links = "tauri-plugin-native-audio"

[build-dependencies]
tauri-plugin = { version = "2", features = ["build"] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = "2"
log = "0.4"
thiserror = "2"

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"

[features]
default = []
